分布式配置中心[测试通过，客户端可通过Config 获取GIT仓库配置文件]

--- a/vastpn-config/pom.xml
+++ b/vastpn-config/pom.xml
@@ -5,13 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.vastpn.framework</groupId>
-    <artifactId>vastpn-order</artifactId>
+    <artifactId>vastpn-config</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
-    <name>vastpn-order</name>
+    <name>vastpn-config</name>
     <url>http://www.xxx.com</url>
-    <description>订单服务</description>
+    <description>配置中心</description>
 
     <parent>
         <groupId>com.vastpn.framework</groupId>
@@ -21,22 +20,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.cloud</groupId>-->
-            <!--<artifactId>spring-cloud-starter-feign</artifactId>-->
-        <!--</dependency>-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -45,4 +37,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
