--- a/vastpn-order/pom.xml
+++ b/vastpn-order/pom.xml
@@ -36,6 +36,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.vastpn.framework</groupId>
+            <artifactId>swagger-spring-boot-starter</artifactId>
+            <version>1.1.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
