--- a/vastpn-order/src/main/resources/bootstrap.yml
+++ b/vastpn-order/src/main/resources/bootstrap.yml
@@ -15,3 +15,9 @@ spring:
       discovery:
         enabled: true
         service-id: vastpn-config
+      fail-fast: true
+      retry:
+        initial-interval: 20000
+        max-attempts: 6
+        max-interval: 3000
+        multiplier: 1.1
