--- a/vastpn-remote-config/vastpn-order/vastpn-order-dev.yml
+++ b/vastpn-remote-config/vastpn-order/vastpn-order-dev.yml
@@ -7,3 +7,13 @@ server:
 info:
  test: Remote-Config-Ref-Success
 
+spring:
+  boot:
+    swagger2:
+      enable: true
+      title: 订单开放平台
+      description: 订单开放平台
+      version: 1.1.1
+      contactName: AAAA
+      contactEmail: vastpn@info.com
+      contactUrl: http://www.vastpn.com
