--- a/vastpn-order/src/main/resources/bootstrap.yml
+++ b/vastpn-order/src/main/resources/bootstrap.yml
@@ -1,4 +1,6 @@
 eureka:
+  instance:
+    lease-renewal-interval-in-seconds: 10
   client:
     serviceUrl:
       defaultZone: http://bu-admin:123456@localhost:9999/eureka/
