--- a/vastpn-zuul/src/main/resources/bootstrap.yml
+++ b/vastpn-zuul/src/main/resources/bootstrap.yml
@@ -1,6 +1,7 @@
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 10
+    lease-expiration-duration-in-seconds: 60
   client:
     serviceUrl:
       defaultZone: http://bu-admin:123456@localhost:9999/eureka/
