关闭安全端点

--- a/vastpn-remote-config/vastpn-user/vastpn-user-dev.yml
+++ b/vastpn-remote-config/vastpn-user/vastpn-user-dev.yml
@@ -1,6 +1,9 @@
 ##########################
 ## profile:dev
 ##########################
+management:
+  security:
+    enabled: false
 server:
   port: 9996
 
