--- a/vastpn-remote-config/vastpn-zuul/vastpn-zuul-dev.yml
+++ b/vastpn-remote-config/vastpn-zuul/vastpn-zuul-dev.yml
@@ -1,6 +1,10 @@
 ##########################
 ## profile:dev
 ##########################
+management:
+  security:
+    enabled: false
+
 server:
   port: 9900
 
