--- a/vastpn-user/src/main/resources/bootstrap.yml
+++ b/vastpn-user/src/main/resources/bootstrap.yml
@@ -14,7 +14,7 @@ spring:
   cloud:
     config:
       enabled: true
-      profile: dev
+      profile: sit
       discovery:
         enabled: true
         service-id: vastpn-config
