--- a/vastpn-order/src/main/resources/bootstrap.yml
+++ b/vastpn-order/src/main/resources/bootstrap.yml
@@ -1,3 +1,6 @@
+#################################################
+# 注册中心配置
+#################################################
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 10
@@ -5,12 +8,12 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://bu-admin:123456@localhost:9999/eureka/
-
+#################################################
+# 项目基础配置、远程配置中心
+#################################################
 spring:
   application:
-    name: vastpn-order # 所有服务在注册中心自动转换为大写
-#  profiles:
-#    active: dev
+    name: vastpn-order
   cloud:
     config:
       enabled: true
@@ -41,18 +44,32 @@ feign:
       enabled: true
       mime-types: text/xml,application/xml,application/json
       min-request-size: 2048
-# Feign 调用超时设置，默认已启用客户端负载ribbon，设置ribbon超时时间有效，其他配置无效
-ribbon:
-  ReadTimeout: 6000
-  ConnectTimeout: 1000
-
+  client:
+    config:
+      default:
+        connectTimeout: 6000
+        readTimeout: 6000
+#################################################
+# 超时配置
+# Feign+Ribbon 超时设置，默认已启用客户端负载ribbon;设置ribbon超时时间有效，其他配置无效
+# timeoutInMilliseconds > (ribbonReadTimeout + ribbonConnectTimeout) * (maxAutoRetries + 1) * (maxAutoRetriesNextServer + 1);
+#################################################
 hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 6000
   threadpool:
     default:
       coreSize: 300
       maximumSize: 350
-
-#undertow容器配置
+#################################################
+#undertow运行容器配置(性能>Tomcat)
+#################################################
 server:
   undertow:
     #【I/O线程数】CPU 数量;它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心为一个线程.不要设置过大，如果过大，启动项目会报错：打开文件数过多
