--- a/vastpn-remote-config/vastpn-zuul/vastpn-zuul-dev.yml
+++ b/vastpn-remote-config/vastpn-zuul/vastpn-zuul-dev.yml
@@ -20,11 +20,7 @@ zuul:
       serviceId: vastpn-order
       # 当前版本默认为true，访问时必须加服务名称前缀；false时不需要填写服务名称
       stripPrefix: false
-#    vastpn-user:
-#      path: /user/**
-#      serviceId: vastpn-user
-#      stripPrefix: false
-    ulin:
+    vastpn-user:
       path: /user/**
-      serviceId: ulin
+      serviceId: vastpn-user
       stripPrefix: false
