--- a/vastpn-order/src/main/resources/bootstrap.yml
+++ b/vastpn-order/src/main/resources/bootstrap.yml
@@ -5,6 +5,9 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 60
+    metadata-map:
+        user.name: ${security.user.name}
+        user.password: ${security.user.password}
   client:
     serviceUrl:
       defaultZone: http://bu-admin:123456@localhost:9999/eureka/
@@ -27,9 +30,17 @@ spring:
         max-attempts: 6
         max-interval: 3000
         multiplier: 1.1
+      username: ${security.user.name}
+      password: ${security.user.password}
   messages:
     encoding: UTF-8
     basename: i18n/messages
+  boot:
+    admin:
+      client:
+        metadata:
+          user.name: ${security.user.name}
+          user.password: ${security.user.password}
 # Feign开启降级服务；启动类无需hystrix注解；写降级类组件，实现feign业务接口即可
 feign:
   httpclient:
@@ -87,3 +98,15 @@ server:
     max-http-post-size: 5000
 
 
+endpoints:
+  logfile:
+    enabled: true
+  shutdown:
+    enabled: true
+security:
+  user:
+    name: bu-admin
+    password: 123456
+
+logging:
+  path: ./logs/vastpn-order
