增加 自定义info信息

--- a/vastpn-order/src/main/resources/bootstrap.yml
+++ b/vastpn-order/src/main/resources/bootstrap.yml
@@ -121,5 +121,6 @@ management:
   security:
     enabled: true
 
+
 logging:
-  path: ./logs/vastpn-order
+  file: ./logs/${spring.application.name}/${spring.application.name}.log
