--- a/vastpn-parent/pom.xml
+++ b/vastpn-parent/pom.xml
@@ -197,7 +197,7 @@
                     <executions>
                         <execution>
                             <goals>
-                                <goal>repackage</goal>
+                                <goal>build-info</goal>
                             </goals>
                         </execution>
                     </executions>
